Extract a method to read file path from SingleFileWritingIterator output